Fix overflow

--- a/src/Components/header/header.css
+++ b/src/Components/header/header.css
@@ -3,7 +3,7 @@
   position: sticky;
   top: 0;
   min-height: 5vh;
-  width: 100vw;
+  width: 100%;
   background-color: #222;
   z-index: 4;
 }
