--- a/style.css
+++ b/style.css
@@ -43,8 +43,8 @@ html {
 }
 
 body {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  min-height: 100vh;
   background-image: url("https://www.transparenttextures.com/patterns/concrete-wall.png");
 }
 
